# SuperResearch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: README.md  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/research/: page.tsx
frontend/components/: ResearchForm.tsx  ResultsDisplay.tsx  ThinkingProgress.tsx  TokenCounter.tsx
src/: cli.py
src/research_agent/agents/: modern_agent.py
src/research_agent/api/: main.py
src/research_agent/rag/: rag_system.py
src/research_agent/templates/: report_templates.py
src/research_agent/tools/: search_tools.py
src/research_agent/utils/: cost_tracker.py  feedback_processor.py  pdf_generator.py  session_manager.py
